# e33a2eeeb9e69ccce9e871fb11133de4856d640937543497fe75954637fa20c8_obesity_risk_classification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
airflow/config/: airflow.cfg
airflow_results/: drift_detection_results.json  evaluate_model_results.json  feature_engineering_results.json  preprocess_data_results.json  preprocessing_results.json  retrain_model_results.json  retrain_results.json  train_model_results.json  training_results.json
config/: airflow.cfg  config.yaml  config_loader.py  preprocessing_config.yaml
data/: readme.md
data/preprocessed/: obesity_data_preprocessed.csv
data/splits/: drifted_test.csv  drifted_train.csv  test.csv  train.csv
deploy/: deploy.sh  docker-compose.yaml
deploy/airflow/config/: airflow.cfg
deploy/airflow/dags/: ml_pipeline_dag.py  sample.py
deploy/docker/: Dockerfile  Dockerfile.mlflow  airflow.Dockerfile  docker-compose.yaml  pipeline.Dockerfile
mlflow/artifacts/: feature_names.txt
models/: model.pkl
notebooks/: obesity_eda.ipynb
reports/: drift_report.json  evaluation_results.json  metrics.txt  metrics_drifted.txt  metrics_original.txt
src/: data_ingestion.py  data_preprocessing.py  drift_detection.py  evaluation.py  feature_engineering.py  model_training.py  run_pipeline.py  test.py
tests/: test_data_preprocessing.py  test_evaluation.py  test_feature_engineering.py  test_model_training.py
