[project]
name = "e33a2eeeb9e69ccce9e871fb11133de4856d640937543497fe75954637fa20c8-obesity-risk-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dice-ml",
    "imbalanced-learn",
    "ipykernel>=6.29.5",
    "llvmlite==0.38.1",
    "matplotlib",
    "numba==0.55.2",
    "numpy",
    "pandas",
    "pre-commit>=4.2.0",
    "scikit-learn",
    "seaborn",
    "shap==0.41.0",
    "xgboost",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
extend-select = ["I"]  # for import sorting (matches isort)
