[project]
name = "e33a2eeeb9e69ccce9e871fb11133de4856d640937543497fe75954637fa20c8-obesity-risk-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "matplotlib>=3.8.4",
    "numpy>=1.22.4",
    "pandas>=1.5.1",
    "pre-commit>=4.2.0",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.2",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "pytest==8.4.1"
]
