[project]
name = "e33a2eeeb9e69ccce9e871fb11133de4856d640937543497fe75954637fa20c8-obesity-risk-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn==0.12.4",
    "matplotlib==3.8.4",
    "numpy==1.22.4",
    "pandas==1.5.1",
    "pre-commit==4.2.0",
    "scikit-learn==1.6.1",
    "xgboost==3.0.2",
    "mlflow==3.1.4",
    "psycopg2-binary==2.9.10",
    "kaggle>=1.7.4.5",
    "pyyaml>=6.0.2",
    "evidently==0.7.11",
    "flask-session==0.5.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.1"
]
